增加评分点赞的后台功能