@@ -23,7 +23,6 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -34,9 +33,10 @@ public class SecurityConfig {
     private final UserDetailsService userDetailsService;
     private final JwtTokenProvider tokenProvider;
 
+
     @Bean
     public JwtAuthenticationFilter jwtAuthenticationFilter() {
-        return new JwtAuthenticationFilter(tokenProvider, userDetailsService);
+        return new JwtAuthenticationFilter(tokenProvider,userDetailsService);
     }
 
     @Bean
@@ -54,44 +54,22 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        // 最宽松配置 - 允许所有请求，禁用大部分安全特性
         http
-                // 配置CSRF保护 - 对API服务通常可以禁用
+                // 禁用CSRF保护
                 .csrf(csrf -> csrf.disable())
-
-                // 启用CORS
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-
-                // 配置会话管理 - JWT是无状态的
-                .sessionManagement(session ->
-                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-
-                // 配置请求授权
+                // 禁用跨域保护
+                .cors(cors -> cors.disable())
+                // 允许所有请求
                 .authorizeHttpRequests(auth -> auth
-                        // 公开接口 - 不需要认证
-                        .requestMatchers("/api/auth/**", "/api/public/**", "/swagger-ui/**", "/v3/api-docs/**").permitAll()
-                        // 允许OPTIONS请求通过，用于CORS预检
-                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                        // 特定权限控制
-                        .requestMatchers("/api/admin/**").hasRole("ADMIN")
-                        // 其他所有请求需要认证
-                        .anyRequest().authenticated()
+                        .anyRequest().permitAll()
                 )
-
-                // 禁用表单登录，我们使用JWT
+                // 禁用表单登录
                 .formLogin(form -> form.disable())
-
                 // 禁用HTTP Basic认证
                 .httpBasic(basic -> basic.disable())
-
-                // 配置注销功能
-                .logout(logout -> logout
-                        .logoutUrl("/api/auth/logout")
-                        .logoutSuccessHandler((request, response, authentication) -> {
-                            response.setStatus(200);
-                        }));
-
-        // 添加JWT过滤器
-        http.addFilterBefore(jwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class);
+                // 禁用登出功能
+                .logout(logout -> logout.disable());
 
         return http.build();
     }
@@ -99,19 +77,11 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // 指定允许的源，不要使用*，尤其是在允许凭据时
-        configuration.setAllowedOrigins(List.of("http://localhost:8080", "https://your-production-domain.com"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList(
-                "Authorization",
-                "Content-Type",
-                "X-Requested-With"
-        ));
-        configuration.setExposedHeaders(Arrays.asList("Authorization", "X-New-Token"));
-        // 如果设置为true，确保设置了具体的AllowedOrigins而不是通配符
+        configuration.setAllowedOrigins(Arrays.asList("*"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
+        configuration.setExposedHeaders(Arrays.asList("Authorization"));
         configuration.setAllowCredentials(true);
-        // 缓存时间
-        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
